===v4.4.4===
 * Bug Fixes:
 ** (r145) Totem icons now work for mushrooms/DK ghouls

===v4.4.3===
 * You can now specify a custom texture to be used for an icon.
 * Added whisper as a text output destination.
 * Shuffled around some framelevels in hopes of fixing the timer bug.
 * Attempted to force cooldowns to reset upon entering an arena. (UNTESTED)
 * Added a dialog to warn users of the dangers of configuration mode.
 * New Conditions:
 ** Pet attack mode
 ** Spell cooldown duration comparison
 ** Item Cooldown duration comparison
 ** Buff duration comparison
 ** Debuff duration comparison
 * Bug Fixes:
 ** (r133) attempt to compare number with nil (In spell cooldown conditions)
 ** (r133) conditions.lua:1009: Usage: GetTalentTabInfo(tabIndex[, isInspect[, isPet[, groupIndex]]])
 ** (r136) TellMeWhen-4.4.3.lua:1630: attempt to index field "Font" (a nil value)
 ** (r137) TellMeWhen_Options.lua:4038: attempt to index global "groups" (a nil value)
 ** (r140) Icon's OnHide events should now properly fire when Always Hide is checked.
 ** (r142) Using equivalencies with the new duration syntax should now cause the duration to be applied to all spells in the equivalency.
 ** (r142) Fixed item textures in config mode.
 
===v4.4.2===
 * Misc. updates.

===v4.4.1===
 * New Condition: Spell autocasting
 * New Condition: Tracking active
 * New option for buff icons (mage only): Only stealable.
 * Added a toggle to DR icons to help work around the buggy spell refresh behavior.
 * Greatly improved config mode texture detection.
 * Added Wing Clip to the slowed equivalency.
 * Bug Fixes:
 ** (r124) Inserting an equivalency via the dropdown should now properly save the text in the editbox.

===v4.4.0===