@@ -150,6 +150,11 @@
 			</OnShow>
 		</Scripts>
 	</Button>
+	<Button name="TellMeWhen_ButtonTemplate" inherits="GameMenuButtonTemplate" virtual="true">
+		<NormalFont style="GameFontNormal"/>
+		<HighlightFont style="GameFontHighlight"/>
+		<DisabledFont style="GameFontDisable"/>
+	</Button>
 
 	<Button name="TellMeWhen_SpellSuggestTemplate" virtual="true" hidden="true">
 		<Size>
@@ -1625,9 +1630,9 @@
 	</Button>
 
 	<Frame name="TellMeWhen_ConfigWarning" hidden="true" movable="true" toplevel="true" clampedToScreen="true" enableMouse="true" frameStrata="DIALOG">
-		<Size x="300" />
+		<Size x="330" />
 		<Anchors>
-			<Anchor point="TOP" relativeTo="UIParent" x="0" y="-40" />
+			<Anchor point="TOP" relativeTo="UIParent" x="0" y="-60" />
 		</Anchors>
 		<Backdrop bgFile="Interface\DialogFrame\UI-DialogBox-Background-Dark" edgeFile="Interface\DialogFrame\UI-DialogBox-Border" tile="true">
 			<BackgroundInsets>
@@ -1642,28 +1647,20 @@
 		</Backdrop>
 		<TitleRegion name="$parentTitleRegion" setAllPoints="true"/>
 		<Frames>
-			<Button name="$parentExit" parentKey="Exit" inherits="UIPanelButtonTemplate">
-				<Size>
-					<AbsDimension x="120" y="17" />
-				</Size>
+			<Button name="$parentExit" parentKey="Exit" inherits="TellMeWhen_ButtonTemplate">
+				<Size x="150" y="20" />
 				<Anchors>
-					<Anchor point="BOTTOMLEFT">
-						<Offset x="15" y="13" />
-					</Anchor>
+					<Anchor point="BOTTOMLEFT" x="13" y="13" />
 				</Anchors>
 				<Scripts>
 					<OnLoad> self:SetText(TMW.L["CONFIGMODE_EXIT"]) </OnLoad>
 					<OnClick>TMW:LockToggle() </OnClick>
 				</Scripts>
 			</Button>
-			<Button name="$parentNeverAgain" parentKey="NeverAgain" inherits="UIPanelButtonTemplate">
-				<Size>
-					<AbsDimension x="120" y="17" />
-				</Size>
+			<Button name="$parentNeverAgain" parentKey="NeverAgain" inherits="TellMeWhen_ButtonTemplate">
+				<Size x="150" y="20" />
 				<Anchors>
-					<Anchor point="BOTTOMRIGHT">
-						<Offset x="-15" y="13" />
-					</Anchor>
+					<Anchor point="BOTTOMRIGHT" x="-13" y="13" />
 				</Anchors>
 				<Scripts>
 					<OnLoad> self:SetText(TMW.L["CONFIGMODE_NEVERSHOW"]) </OnLoad>
@@ -1685,7 +1682,6 @@
 					</Anchors>
 				</FontString>
 				<FontString name="$parentDesc" parentKey="desc" inherits="GameFontHighlight" justifyH="CENTER" justifyV="TOP">
-					<Size x="290"/>
 					<Anchors>
 						<Anchor point="TOP" y="-32" />
 					</Anchors>
@@ -1696,9 +1692,9 @@
 			<OnLoad>
 				self.title:SetText(TMW.L["ICON_TOOLTIP1"])
 				self.desc:SetText(TMW.L["CONFIGMODE"])
-				self:SetScale(0.8)
-				self.desc:SetWidth(self:GetWidth() - 20)
-				self:SetHeight(self.desc:GetHeight() + 70)
+				self:SetScale(0.85)
+				self.desc:SetWidth(self:GetWidth() - 30)
+				self:SetHeight(self.desc:GetHeight() + 75)
 			</OnLoad>
 		</Scripts>
 	</Frame>
@@ -3298,7 +3294,7 @@
 						</Scripts>
 					</Slider>
 
-					<Button name="$parentReset" parentKey="ResetButton" inherits="GameMenuButtonTemplate" text="RESET">
+					<Button name="$parentReset" parentKey="ResetButton" inherits="TellMeWhen_ButtonTemplate" text="RESET">
 						<Size>
 							<AbsDimension x="100" y="17" />
 						</Size>
@@ -3311,9 +3307,6 @@
 							<OnLoad> self:SetFrameLevel(self:GetFrameLevel()+2)</OnLoad>
 							<OnClick>TMW.IE:Reset()</OnClick>
 						</Scripts>
-						<NormalFont style="GameFontNormal"/>
-						<HighlightFont style="GameFontHighlight"/>
-						<DisabledFont style="GameFontDisable"/>
 					</Button>
 
 					<Frame name="$parentCopy" inherits="UIDropDownMenuTemplate" parentKey="Copy">
@@ -4203,14 +4196,10 @@
 				</Scripts>
 			</Frame> -->
 
-			<Button name="$parentOkay" parentKey="OkayButton" inherits="UIPanelButtonTemplate" text="OKAY">
-				<Size>
-					<AbsDimension x="60" y="17" />
-				</Size>
+			<Button name="$parentOkay" parentKey="OkayButton" inherits="TellMeWhen_ButtonTemplate" text="OKAY">
+				<Size x="60" y="17" />
 				<Anchors>
-					<Anchor point="BOTTOMRIGHT">
-						<Offset x="-15" y="13" />
-					</Anchor>
+					<Anchor point="BOTTOMRIGHT" x="-15" y="13" />
 				</Anchors>
 				<Scripts>
 					<OnLoad> self:SetFrameLevel(self:GetParent():GetFrameLevel()+4) </OnLoad>
